react-link-bird.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-link-bird-ingress
spec:
  tls:
  - hosts:
    - linkbird.io # [Self-Hosted]
    secretName: linkbird-io-secret
  - hosts:
    - app.linkbird.io # [Self-Hosted]
    secretName: app-linkbird-io-secret
  rules:
    - host: "linkbird.io" # [Self-Hosted]
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-link-bird-service
                port:
                  number: 80
    - host: "app.linkbird.io" # [Self-Hosted]
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-link-bird-service
                port:
                  number: 80
  ingressClassName: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-link-bird-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-link-bird
  template:
    metadata:
      labels:
        app: react-link-bird
    spec:
      containers:
      - name: react-link-bird
        image: hirebarend/react-link-bird:c2e5d180e1b71a0478fae11d7ac6aa4bfa50455f
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-link-bird-service
spec:
  selector:
    app: react-link-bird
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
